update requirements with test file requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,9 @@ fastapi==0.104.1
 uvicorn==0.23.2
 pydantic==2.4.2
 python-multipart==0.0.6  # For handling file uploads
+openai~=1.76.0
+python-dotenv~=1.1.0
+pytest==7.4.0
+pytest-cov==4.1.0
+httpx==0.24.1
+python-jose[cryptography]==3.3.0
