--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -18,17 +18,13 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pytest pytest-cov
-      - name: Run tests with coverage
+          pip install fastapi uvicorn pydantic python-multipart openai python-dotenv pytest pytest-cov httpx
+      - name: Create dummy .env file for tests
         run: |
-          pytest --cov=main --cov-report=xml
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./coverage.xml
-          fail_ci_if_error: false
+          echo "OPENAI_API_KEY=dummy-key-for-testing" > .env
+      - name: Run tests
+        run: |
+          pytest -v
 
   deploy:
     needs: test
@@ -43,14 +39,17 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      - name: Login to Azure
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-      - name: Deploy to Azure App Service
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: 'music-transposition-api'
-          slot-name: 'production'
-          publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
+          pip install fastapi uvicorn pydantic python-multipart openai python-dotenv
+      # Commented out Azure deployment until credentials are set up
+      # - name: Login to Azure
+      #   uses: azure/login@v1
+      #   with:
+      #     creds: ${{ secrets.AZURE_CREDENTIALS }}
+      # - name: Deploy to Azure App Service
+      #   uses: azure/webapps-deploy@v2
+      #   with:
+      #     app-name: 'music-transposition-api'
+      #     slot-name: 'production'
+      #     publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
+      - name: Deployment placeholder
+        run: echo "Deployment would happen here once Azure credentials are configured"
